fix: Add missing gradient animation and dismiss translation keys
- Add animate-gradient CSS animation for GradientText component
- Add dismiss translation keys for contact form success message
- Fix missing CSS keyframes for gradient background animation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -193,6 +193,7 @@
     "send": "Send Message",
     "success": "Message sent successfully!",
     "error": "Something went wrong. Please try again.",
+    "dismiss": "Dismiss",
     "mailtoNotice": "Clicking \"Send\" will open your default email client."
   },
   "pricing": {
