fix: Remove unused components and fix multiple bugs
- Delete duplicate AboutPage and ContactPage in components folder
- Delete unused components: Header, Layout, FloatingCard, MetallicLogo,
  TestimonialsSection, ActionButtonsSection, LiveDemoSection
- Fix usePageMeta to properly restore OG and Twitter meta tags on cleanup
- Fix skip-to-content link positioning (focus:top-2 focus:left-2)
- Add i18n translations for Hero floating cards (EN/HR)
- Update HeroSection to use translated strings for all floating cards

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,7 +33,19 @@
     "title": "Manage All Your Bookings in One Place",
     "subtitle": "The complete booking management platform for vacation rental owners",
     "cta": "Get Started Free",
-    "watchDemo": "Watch Demo"
+    "watchDemo": "Watch Demo",
+    "cards": {
+      "newBooking": "New Booking",
+      "justNow": "Just now",
+      "bookedMessage": "Marko P. booked Apartman A2 for Dec 20-25",
+      "paymentReceived": "Payment received",
+      "checkIn": "Check-in",
+      "checkInToday": "Check-in Today",
+      "today": "Today",
+      "guestInfo": "Ana M. - Apartman A1",
+      "occupancy": "85% Occupancy",
+      "thisMonth": "This month"
+    }
   },
   "trust": {
     "title": "Built with Modern Technology"
